@@ -3,9 +3,10 @@ jalv (1.2.1) unstable;
   * Send time information to plugin when Jack tempo changes
   * Make URI map thread-safe, fixing occasional crashes for plugins with UIs
   * Add menu bar and pass parent widget in Qt version for true UI embedding
+  * Support state:loadDefaultState
   * Update to waf 1.7.8 and autowaf r90
 
- -- David Robillard <d@drobilla.net>  Sat, 22 Dec 2012 20:17:35 -0500
+ -- David Robillard <d@drobilla.net>  Sat, 26 Jan 2013 16:18:18 -0500
 
 jalv (1.2.0) stable;
 
